Django REST framework快速入门

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-asgiref==3.2.3
-Django==3.0.2
-djangorestframework==3.11.0
-Pygments==2.5.2
-pytz==2019.3
-sqlparse==0.3.0
+asgiref==3.2.7
+certifi==2020.4.5.1
+chardet==3.0.4
 coreapi==2.3.3
+coreschema==0.0.4
+Django==3.0.6
+django-filter==2.2.0
+djangorestframework==3.11.0
+idna==2.9
+importlib-metadata==1.6.0
+itypes==1.2.0
+Jinja2==2.11.2
+Markdown==3.2.2
+MarkupSafe==1.1.1
+Pygments==2.6.1
+pytz==2020.1
+requests==2.23.0
+sqlparse==0.3.1
+uritemplate==3.0.1
+urllib3==1.25.9
+zipp==3.1.0
